--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,11 @@ tokio = { version = "1.23.0", features = ["full"] }
 toml = "0.5.2"
 serde = "1.0.136"
 serde_derive = "1.0.136"
+
+tonic = { version = "0.8.3", features = ["transport", "tls"] }
+prost = "0.11.3"
+prost-types = "0.11.2"
+protobuf = "3.2.0"
+
+[build-dependencies]
+tonic-build = "0.8.4"
