--- a/sample_config/config.toml
+++ b/sample_config/config.toml
@@ -1,12 +1,12 @@
 [video]
 src_type = "v4l"
-source = "0"
+source = 0
 
 [command]
 default = "record"
 
 [backend]
-url = "https://backend.address"
+url = "http://127.0.0.1:50051"
 
 [misc]
 log_level = "DEBUG"
