--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 v4l = "0.13.1"
 image = "0.24.5"
+base64 = "0.20.0"
 
+futures-executor = "0.3.25"
 tokio = { version = "1.23.0", features = ["full"] }
 
 toml = "0.5.2"
