add sudo to make apt run

--- a/.github/workflows/buildpublish.yml
+++ b/.github/workflows/buildpublish.yml
@@ -19,8 +19,8 @@ jobs:
           rustup update
           rustup component add clippy
           rustup install nightly 
-          apt update && apt upgrade -y
-          apt install -y protobuf-compiler libprotobuf-dev         
+          sudo apt update && apt upgrade -y
+          sudo apt install -y protobuf-compiler libprotobuf-dev         
 
       - name: Toolchain info
         run: |
