--- a/.github/workflows/buildpublish.yml
+++ b/.github/workflows/buildpublish.yml
@@ -22,6 +22,7 @@ jobs:
           sudo apt update
           sudo apt upgrade -y
           sudo apt install -y protobuf-compiler libprotobuf-dev         
+          sudo apt install -y libopencv-dev clang libclang-dev
 
       - name: Toolchain info
         run: |
